--- a/introduce/main.css
+++ b/introduce/main.css
@@ -137,3 +137,26 @@ body {
     padding-top: 300px; 
     margin-right: 1400px; 
 }
+
+.search-container {
+    display: flex;
+    align-items: center;
+}
+.search-container .form-control {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.search-container .btn {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    margin-right: 50px;
+}
+
+.navbar-brand img {
+    width: 100px; /* Đặt kích thước chiều rộng mong muốn */
+    height: auto; /* Đảm bảo tỷ lệ khung hình không bị thay đổi */
+}
+
+.navbar{
+    background-color: #F07900;
+}
