Add new project food

--- a/public/home/home.css
+++ b/public/home/home.css
@@ -3,9 +3,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  max-width: 99vw !important;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 *,
 *::before,
 *::after {
@@ -15,55 +17,61 @@
   color: var(--cl-1--cl-2--);
 }
 
-body{
-    --cl-1--:#fff;
-    --cl-2--:#000;
-    --cl-3--:##ff7426;
-    --cl-4--:#e7fafe
-    --cl-5--:linear-gradient(180deg, rgba(231, 249, 253, 0) 0%, #E7f9fd 100%);
-    --cl-6--:rgba(0,0,0,0.6);
-    --cl-7--:rgba(0,0,0,0.05);
-    background: var(--cl-1--);
-    margin: 0;
+body {
+  --cl-1--: #fff;
+  --cl-2--: #000;
+  --cl-3--: #ff7426;
+  --cl-4--: #e7fafe;
+  --cl-5--: linear-gradient(180deg, rgba(231, 249, 253, 0) 0%, #e7f9fd 100%);
+  --cl-6--: rgba(0, 0, 0, 0.6);
+  --cl-7--: rgba(0, 0, 0, 0.05);
+  background: var(--cl-1--);
+  margin: 0;
 }
 
-img{
-    max-width: 100%;
+img {
+  max-width: 100%;
 }
 
-h1, h2,h5,h6,p{
-    margin: 0;
+h1,
+h2,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
-a{
-    display: inline-block;
-    text-decoration: none;
-    transition: 0.3s ease-in-out;
-    -webkit-transition: 0.3s ease-in-out;
-    -moz-transition: 0.3s ease-in-out;
-    -ms-transition: 0.3s ease-in-out;
-    -o-transition: 0.3s ease-in-out;
+a {
+  display: inline-block;
+  text-decoration: none;
+  transition: 0.3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -ms-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
 }
 
-ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-
-
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.row{
-    display: flex;
+.row {
+  display: flex;
+  margin-left: 0 !important;
 }
 
-.column{
-    display: grid;
+.column {
+  display: grid;
 }
 
-.container{
-    max-width: 90%;
-    margin: 0 auto;
+.container {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 header {
@@ -73,13 +81,6 @@ header {
   color: #fff;
   display: flex;
   align-items: center;
-}
-.container {
-  width: 90%;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .nav-list {
@@ -99,7 +100,7 @@ nav ul li {
 
 .hero {
   width: 100%;
-  height: quto;
+  height: auto;
   background: url(/public/assets/images/heo-image.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -149,7 +150,7 @@ nav ul li {
   cursor: pointer;
 }
 
-/* ..........Rectpe Section............ */
+/* ..........Recipe Section............ */
 
 .recipes {
   padding: 50px 0;
@@ -196,7 +197,7 @@ nav ul li {
   display: block;
   text-align: center;
   text-decoration: none;
-  background: #333;
+  background: #f07900;
   color: #fff;
   padding: 15px 0;
   cursor: pointer;
@@ -237,9 +238,11 @@ footer {
     font-size: 15px;
   }
 }
+
 .category-btn {
   padding: 2em 0;
 }
+
 .category-title {
   align-items: center;
   justify-content: space-between;
@@ -340,63 +343,62 @@ h2 {
   transform: scale(0.95);
 }
 
-
-
 /* Placeholder style */
 .navbar .form-control::placeholder {
   color: rgb(206, 206, 206) !important;
-  opacity: 1; /* Đảm bảo màu placeholder hiển thị rõ ràng */
+  opacity: 1;
 }
+
 .search-container .form-control {
   width: 100%;
   box-sizing: border-box;
-  border-radius: 20px; /* Độ bo tròn của ô tìm kiếm */
-  border: 2px solid white; /* Màu đường viền */
-  height: 38px; /* Chiều cao của ô tìm kiếm */
+  border-radius: 20px;
+  border: 2px solid white;
+  height: 38px;
   color: rgb(11, 7, 7) !important;
-  background-color: #eee; /* Để input trong suốt */
+  background-color: #eee;
 }
 
 /* Navbar styles */
 .navbar {
-  background-color: #F07900;
+  background-color: #f07900;
 }
 
 .navbar-brand img {
-  width: 100px; /* Đặt kích thước chiều rộng mong muốn */
-  height: auto; /* Đảm bảo tỷ lệ khung hình không bị thay đổi */
+  width: 100px;
+  height: auto;
 }
 
 .nav-link {
   color: white !important;
-  font-size: 1.1em; /* Tăng kích thước font chữ */
+  font-size: 1.1em;
 }
 
 .nav-link:hover {
-  text-decoration: underline; /* Gạch chân khi hover */
+  text-decoration: underline;
 }
 
 .navbar-nav .nav-link,
 .navbar-brand,
 .navbar .btn {
   color: white !important;
-  font-size: 18px; /* Điều chỉnh kích thước phông chữ */
+  font-size: 18px;
 }
 
 /* Dropdown menu styles */
 .navbar .dropdown-menu {
-  background-color: #ffffff; /* Màu nền của dropdown */
-  border-color: #fefefe; /* Màu đường viền của dropdown */
+  background-color: #ffffff;
+  border-color: #fefefe;
 }
 
 .navbar .dropdown-menu .dropdown-item {
   color: black !important;
-  font-size: 18px; /* Kích thước phông chữ cho các mục dropdown */
+  font-size: 18px;
 }
 
 .navbar .dropdown-menu .dropdown-item:hover {
-  color: white !important; /* Màu khi hover vào mục dropdown */
-  background-color: black !important; /* Màu nền khi hover */
+  color: white !important;
+  background-color: black !important;
 }
 
 /* Button styles */
@@ -412,12 +414,8 @@ h2 {
   border-color: white !important;
 }
 
-#fixed-menu{
+#fixed-menu {
   position: sticky;
   top: 0;
   z-index: 10000;
-}
-.row{
-  margin-left: 0 !important; 
-  
 }
