--- a/public/detail_tutorial/DA/detail.css
+++ b/public/detail_tutorial/DA/detail.css
@@ -420,7 +420,7 @@ webkit-box-shadow: 0 8px 48px 8px rgba(47, 91, 234, 0.175);
 }
 .single-footer-widget .footer_menu li a:hover,
 .single-footer-widget .footer_menu li a:focus {
-    color: #3f43fd;
+    color: white;
 }
 .single-footer-widget .footer_menu li:last-child a {
     margin-bottom: 0;
@@ -476,4 +476,7 @@ ol, ul {
     padding: 0;
 }
 
+.footer_menu{
+    margin-left: 10px;
+}
     
