--- a/public/home/home.css
+++ b/public/home/home.css
@@ -250,6 +250,7 @@ footer {
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 2em;
+  padding: 1em 1em;
 }
 
 h2 {
@@ -266,9 +267,6 @@ h2 {
   padding: 0.8em 1.5em;
   border-radius: 15px;
 }
-.category-title h2 {
-  margin-left: 10px;
-}
 
 .category-title a:hover {
   background: var(--cl-3--);
@@ -279,8 +277,7 @@ h2 {
 .category-cards {
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 2em;
-  padding: 2em 0;
-  margin-left: 10px;
+  padding: 2em 2em;
 }
 
 .cat-card {
