--- a/public/home/home.css
+++ b/public/home/home.css
@@ -173,6 +173,8 @@ nav ul li {
 }
 
 .recipe-card {
+  display: flex;
+  flex-direction: column;
   background: #fff;
   margin: 30px 10px;
   border-radius: 10px;
@@ -191,10 +193,13 @@ nav ul li {
   font-size: 22px;
   padding: 20px;
 }
+
 .recipe-card p {
   font-size: 18px;
   padding: 20px;
+  flex: 1;
 }
+
 .recipe-card a {
   display: block;
   text-align: center;
@@ -203,6 +208,7 @@ nav ul li {
   color: #fff;
   padding: 15px 0;
   cursor: pointer;
+  margin-top: auto;
 }
 
 footer {
@@ -243,6 +249,7 @@ footer {
 
 .category-btn {
   padding: 2em 0;
+  position: relative;
 }
 
 .category-title {
