--- a/public/detail_tutorial/DA/detail.css
+++ b/public/detail_tutorial/DA/detail.css
@@ -188,16 +188,7 @@ h5,
     padding: 15px 0 0;
 }
 
-footer {
-    margin-top: 15px;
-    background: #333;
-    padding: 20px 0;
-    color: #fff;
-}
 
-.footer p{  
-    margin: 0px auto;
-}
 
 @media only screen and (max-width: 576px) {
 
@@ -311,6 +302,7 @@ h6{
   }
   
   body{margin-top:20px;}
+
 .footer_area {
     position: relative;
     z-index: 1;
@@ -479,4 +471,18 @@ ol, ul {
 .footer_menu{
     margin-left: 10px;
 }
-    
+footer {
+    margin-top: 15px;
+    background: #333;
+    padding: 20px 0;
+    color: #fff;
+}
+
+.footer p{  
+    margin: 0px auto;
+}
+@media(max-width: 991px) {
+    .step-content{
+        margin-left: 15px;
+    }
+}
