--- a/public/sign_in/style.css
+++ b/public/sign_in/style.css
@@ -328,58 +328,59 @@ form.sign-up-form {
 /* Placeholder style */
 .navbar .form-control::placeholder {
   color: rgb(206, 206, 206) !important;
-  opacity: 1; /* Đảm bảo màu placeholder hiển thị rõ ràng */
+  opacity: 1;
 }
+
 .search-container .form-control {
   width: 100%;
   box-sizing: border-box;
-  border-radius: 20px; /* Độ bo tròn của ô tìm kiếm */
-  border: 2px solid white; /* Màu đường viền */
-  height: 38px; /* Chiều cao của ô tìm kiếm */
+  border-radius: 20px;
+  border: 2px solid white;
+  height: 38px;
   color: rgb(11, 7, 7) !important;
-  background-color: #eee; /* Để input trong suốt */
+  background-color: #eee;
 }
 
 /* Navbar styles */
 .navbar {
-  background-color: #F07900;
+  background-color: #f07900;
 }
 
 .navbar-brand img {
-  width: 100px; /* Đặt kích thước chiều rộng mong muốn */
-  height: auto; /* Đảm bảo tỷ lệ khung hình không bị thay đổi */
+  width: 100px;
+  height: auto;
 }
 
 .nav-link {
   color: white !important;
-  font-size: 1.1em; /* Tăng kích thước font chữ */
+  font-size: 1.1em;
 }
 
 .nav-link:hover {
-  text-decoration: underline; /* Gạch chân khi hover */
+  text-decoration: underline;
 }
 
 .navbar-nav .nav-link,
 .navbar-brand,
 .navbar .btn {
   color: white !important;
-  font-size: 18px; /* Điều chỉnh kích thước phông chữ */
+  font-size: 18px;
 }
 
 /* Dropdown menu styles */
 .navbar .dropdown-menu {
-  background-color: #ffffff; /* Màu nền của dropdown */
-  border-color: #fefefe; /* Màu đường viền của dropdown */
+  background-color: #ffffff;
+  border-color: #fefefe;
 }
 
 .navbar .dropdown-menu .dropdown-item {
   color: black !important;
-  font-size: 18px; /* Kích thước phông chữ cho các mục dropdown */
+  font-size: 18px;
 }
 
 .navbar .dropdown-menu .dropdown-item:hover {
-  color: white !important; /* Màu khi hover vào mục dropdown */
-  background-color: black !important; /* Màu nền khi hover */
+  color: white !important;
+  background-color: black !important;
 }
 
 /* Button styles */
@@ -393,4 +394,195 @@ form.sign-up-form {
   color: rgb(242, 87, 87) !important;
   background-color: white !important;
   border-color: white !important;
+}
+
+#fixed-menu {
+  position: sticky;
+  top: 0;
+  z-index: 10000;
+}
+
+
+.footer_area {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+webkit-box-shadow: 0 8px 48px 8px rgba(47, 91, 234, 0.175);
+  box-shadow: 0 8px 48px 8px rgba(47, 91, 234, 0.175);
+  padding:60px;
+}
+.footer_area .row {
+  margin-left: -25px;
+  margin-right: -25px;
+}
+.footer_area .row .col,
+.footer_area .row .col-1,
+.footer_area .row .col-10,
+.footer_area .row .col-11,
+.footer_area .row .col-12,
+.footer_area .row .col-2,
+.footer_area .row .col-3,
+.footer_area .row .col-4,
+.footer_area .row .col-5,
+.footer_area .row .col-6,
+.footer_area .row .col-7,
+.footer_area .row .col-8,
+.footer_area .row .col-9,
+.footer_area .row .col-auto,
+.footer_area .row .col-lg,
+.footer_area .row .col-lg-1,
+.footer_area .row .col-lg-10,
+.footer_area .row .col-lg-11,
+.footer_area .row .col-lg-12,
+.footer_area .row .col-lg-2,
+.footer_area .row .col-lg-3,
+.footer_area .row .col-lg-4,
+.footer_area .row .col-lg-5,
+.footer_area .row .col-lg-6,
+.footer_area .row .col-lg-7,
+.footer_area .row .col-lg-8,
+.footer_area .row .col-lg-9,
+.footer_area .row .col-lg-auto,
+.footer_area .row .col-md,
+.footer_area .row .col-md-1,
+.footer_area .row .col-md-10,
+.footer_area .row .col-md-11,
+.footer_area .row .col-md-12,
+.footer_area .row .col-md-2,
+.footer_area .row .col-md-3,
+.footer_area .row .col-md-4,
+.footer_area .row .col-md-5,
+.footer_area .row .col-md-6,
+.footer_area .row .col-md-7,
+.footer_area .row .col-md-8,
+.footer_area .row .col-md-9,
+.footer_area .row .col-md-auto,
+.footer_area .row .col-sm,
+.footer_area .row .col-sm-1,
+.footer_area .row .col-sm-10,
+.footer_area .row .col-sm-11,
+.footer_area .row .col-sm-12,
+.footer_area .row .col-sm-2,
+.footer_area .row .col-sm-3,
+.footer_area .row .col-sm-4,
+.footer_area .row .col-sm-5,
+.footer_area .row .col-sm-6,
+.footer_area .row .col-sm-7,
+.footer_area .row .col-sm-8,
+.footer_area .row .col-sm-9,
+.footer_area .row .col-sm-auto,
+.footer_area .row .col-xl,
+.footer_area .row .col-xl-1,
+.footer_area .row .col-xl-10,
+.footer_area .row .col-xl-11,
+.footer_area .row .col-xl-12,
+.footer_area .row .col-xl-2,
+.footer_area .row .col-xl-3,
+.footer_area .row .col-xl-4,
+.footer_area .row .col-xl-5,
+.footer_area .row .col-xl-6,
+.footer_area .row .col-xl-7,
+.footer_area .row .col-xl-8,
+.footer_area .row .col-xl-9,
+.footer_area .row .col-xl-auto {
+  padding-right: 25px;
+  padding-left: 25px;
+}
+
+.single-footer-widget {
+  position: relative;
+  z-index: 1;
+}
+.single-footer-widget .copywrite-text a {
+  color: #747794;
+  font-size: 1rem;
+}
+.single-footer-widget .copywrite-text a:hover,
+.single-footer-widget .copywrite-text a:focus {
+  color: #3f43fd;
+}
+.single-footer-widget .widget-title {
+  margin-bottom: 1.5rem;
+}
+.single-footer-widget .footer_menu li a {
+  color: #747794;
+  margin-bottom: 1rem;
+  display: block;
+  font-size: 1rem;
+}
+.single-footer-widget .footer_menu li a:hover,
+.single-footer-widget .footer_menu li a:focus {
+  color: white;
+}
+.single-footer-widget .footer_menu li:last-child a {
+  margin-bottom: 0;
+}
+
+.footer_social_area {
+  position: relative;
+  z-index: 1;
+}
+.footer_social_area a {
+  border-radius: 50%;
+  height: 40px;
+  text-align: center;
+  width: 40px;
+  display: inline-block;
+  background-color: #f5f5ff;
+  line-height: 40px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  margin-right: 10px;
+}
+.footer_social_area a i {
+  line-height: 36px;
+}
+.footer_social_area a:hover,
+.footer_social_area a:focus {
+  color: #ffffff;
+}
+
+@-webkit-keyframes bi-cycle {
+  0% {
+      left: 0;
+  }
+  100% {
+      left: 100%;
+  }
+}
+
+@keyframes bi-cycle {
+  0% {
+      left: 0;
+  }
+  100% {
+      left: 100%;
+  }
+}
+ol li, ul li {
+  list-style: none;
+}
+
+ol, ul {
+  margin: 0;
+  padding: 0;
+}
+
+.footer_menu{
+  margin-left: 10px;
+}
+footer {
+  margin-top: 15px;
+  background: #333;
+  padding: 20px 0;
+  color: #fff;
+}
+
+.footer p{  
+  margin: 0px auto;
+}
+@media(max-width: 991px) {
+  .step-content{
+      margin-left: 15px;
+  }
 }
