--- a/public/sign_in/style.css
+++ b/public/sign_in/style.css
@@ -586,3 +586,12 @@ footer {
       margin-left: 15px;
   }
 }
+/*
+#launch-dialog {
+  background: tomato;
+  border-radius: 4px;
+  color: #fff;
+  font-family: Helvetica, Arial, sans-serif;
+  padding: 0.5rem 1rem;
+  position: static;
+}*/
